--- a/style.css
+++ b/style.css
@@ -1,125 +1,72 @@
-
-header{
-  display: block;
+/* Move down content because we have a fixed navbar that is 3.5rem tall */
+body {
+  padding-top: 3.2rem;
 }
 
-body{
-  background:  #A8D0E6;
-  color: #FFF;
-  font-family: "Open Sans", sans-serif;
-  margin: 0px;
-}
-/* Text */
-h1, h2 {
-  text-align: left;
-  /*display: block;*/
-  line-height: 1;
-  font-family: 'Oswald', sans-serif;
-  margin: 50px 0px;
+/*
+ * Header
+ */
+.masthead {
+  margin-bottom: 2rem;
 }
 
-h1{
-  font-size: 200px;
-  font-weight: lighter;
-}
-
-h1:hover{
-  color: #F76C6C;
-}
-
-h2{
-  font-size: 180px;
-}
-
-h3{
-  font-size: 30px;
-}
-
-p {
-  text-align: left;
-}
-
-div.aspect{
-  background-color: #F76C6C;
-  width = 100%;
-  padding: 100px;
-  margin: 0px;
-}
-
-#travel{
-  background-color: #24305E;
-}
-
-#contact{
-  background-color: #F8E9A1;
-  color: #24305E;
-}
-
-/* Navigation Bar and Footer*/
-nav, footer {
-  width: 100%;
-  background-color: #222;
-  opacity: .9;
-}
-
-nav {
-  text-align: center;
-  position: fixed;
-}
-
-footer {
-  bottom: 0;
-  position: fixed;
-  }
-
-ul.bar{
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  overlow: hidden;
-}
-
-li a.navpt{
-  float: left;
-  display: block;
+.masthead-brand {
+  margin-bottom: 0;
+  margin-right: 30px;
   color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
 }
 
-li a.navpt:hover {
-  background-color: #24305E;
+.nav-masthead .nav-link {
+  padding: .25rem 0;
+  font-weight: 700;
+  color: rgba(255, 255, 255, .5);
+  background-color: transparent;
+  border-bottom: .25rem solid transparent;
 }
 
-/* *********************/
+.nav-masthead .nav-link:hover,
+.nav-masthead .nav-link:focus {
+  border-bottom-color: rgba(255, 255, 255, .25);
+}
 
-/* Splash **************/
+.nav-masthead .nav-link + .nav-link {
+  margin-left: 1rem;
+}
+
+.nav-masthead .active {
+  color: #fff;
+  border-bottom-color: #fff;
+}
+
+@media (min-width: 48em) {
+  .masthead-brand {
+    float: left;
+  }
+  .nav-masthead {
+    float: right;
+  }
+}
+
+.navbar {
+  margin-bottom: 20px;
+}
+
 .splash {
-  padding: 100px;
-  margin: 0px;
-  display: grid;
-  grid-template-areas: "name pic";
-  grid-template-columns: 3fr 1fr;
-  align-items: center;
-  overflow: scroll;
+  background-position: center;
+  background-size: 100%;
+  min-height: 400px;
+  background-image: url(./media/about.jpg);
 }
 
-#name{
-  grid-area: name;
+#travel {
+  background-image: url(./media/dom.jpg);
 }
 
-#coverpic {
-  /*float: left; */
-  grid-area: pic;
-
+.cnav {
+  display: -ms-flexbox;
+  /*display: flex;*/
+  color: #fff;
+  text-shadow: 0 .05rem .1rem rgba(125, 125, 125, .5);
+  max-width: 42em;
+  /* box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);*/
 }
-/**************/
-
-/* Travel table*/
-table, th, td {
-  border: 1px solid black;
-  text-align: left;
-}
-/**************/
