--- a/style.css
+++ b/style.css
@@ -70,3 +70,7 @@ body {
   max-width: 42em;
   /* box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);*/
 }
+
+p {
+  font-family: 'Noto Sans TC', sans-serif;
+}
